Estructurado de usuarios

--- a/.npmrc
+++ b/.npmrc
@@ -4,3 +4,4 @@ link-workspace-packages=true
 shared-workspace-lockfile=true
 store-dir=~/.pnpm-store
 prefer-workspace-packages=true
+ignore-workspace-root-check=true
