--- a/package.json
+++ b/package.json
@@ -36,8 +36,14 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/microservices": "^11.1.9",
     "@nestjs/platform-express": "^11.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
+    "dotenv": "^17.2.3",
+    "joi": "^18.0.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
